--- a/index.html
+++ b/index.html
@@ -241,8 +241,8 @@ Your browser does not support the video tag.
 
 
 
-<div class="col-12 d-none" id="portfolio">
-  <div class="col-12 container" id="press">
+<div class="col-12 d-block" id="press-page">
+  <div class="col-12 container">
 <p class="small-headline col-10 col-md-12 col-lg-10 offset-1 offset-md-0 offset-lg-1">
   DISCOVER MORE
 </p>
@@ -253,7 +253,6 @@ Your browser does not support the video tag.
         <li><a class="filter" data-filter=".press">PRESS</a></li>
         <li><a class="filter" data-filter=".insights">INSIGHTS</a></li>
         <li><a class="filter" data-filter=".properties">PROPERTIES</a></li>
-
       </ul>
 
 
@@ -264,40 +263,43 @@ Your browser does not support the video tag.
 <!-- 1-9 -->
 
 <li class="press mix container-p col-12 col-md-4 float-left">
-<div class="portfolio-list col-12 float-left">
-  <a href="press-article-1.html">
-    <div class="col-12 p-0 portfolio-image-container">
-<img src="assets/images/portfolio/visionedit.png" alt="#">
+
+  <a href="press-article-1.html" class="col-12 p-0">
+
+<img src="assets/images/portfolio/visionedit.png" alt="#" class="col-12 p-0">
+<div class="col-12">
+<h3 class="col-12 p-0">Corridors of Opportunity: What's next for the Strip District?</h3>
+<p class="col-12 p-0">Feb 25, 2021, 12:42pm EST | Pittsburgh Business Times</p>
 </div>
-<h3>Corridors of Opportunity: What's next for the Strip District?</h3>
-<p>Feb 25, 2021, 12:42pm EST | Pittsburgh Business Times</p>
 </a>
-</div>
+
 </li>
 
 
 <li class="press mix container-p col-12 col-md-4 float-left">
-<div class="portfolio-list col-12 float-left">
-<a href="press-article-2.html">
-  <div class="col-12 p-0 portfolio-image-container">
-<img src="assets/images/press/jim.png" alt="#">
+
+<a href="press-article-2.html" class="col-12 p-0">
+
+<img src="assets/images/press/jim.png" alt="#" class="col-12 p-0">
+<div class="col-12">
+<h3 class="col-12 p-0">Scalo's Viewpoint: The forces Covid can't stop</h3>
+<p class="col-12 p-0">Feb 3, 2021, 7:54am EST | Jim Scalo</p>
 </div>
-<h3>Scalo's Viewpoint: The forces Covid can't stop</h3>
-<p>Feb 3, 2021, 7:54am EST | Jim Scalo</p>
 </a>
-</div>
+
 </li>
 
 <li class="press mix container-p col-12 col-md-4 float-left">
-<div class="portfolio-list col-12 float-left">
-<a href="press-article-3.html">
-  <div class="col-12 p-0 portfolio-image-container">
-<img src="assets/images/press/diamond-ridge.png" alt="#">
+
+<a href="press-article-3.html" class="col-12 p-0">
+
+<img src="assets/images/press/diamond-ridge.png" alt="#" class="col-12 p-0">
+<div class="col-12">
+<h3 class="col-12 p-0">Burns Scalo buys former KMart site in Moon from Chevron to add to Diamond Ridge plan</h3>
+<p class="col-12 p-0">Dec 30, 2020, 2:02pm EST | Tim Schooley</p>
 </div>
-<h3>Burns Scalo buys former KMart site in Moon from Chevron to add to Diamond Ridge plan</h3>
-<p>Dec 30, 2020, 2:02pm EST | Tim Schooley</p>
 </a>
-</div>
+
 </li>
 
 
@@ -305,85 +307,91 @@ Your browser does not support the video tag.
 
 
               <li class="insights mix container-p col-12 col-md-4 float-left">
-                <div class="portfolio-list col-12 float-left">
-                  <a href="insights-article-0.html">
-                    <div class="col-12 p-0 portfolio-image-container">
-                <img src="assets/images/insights/article-0/diamond-ridge.png" alt="#">
-                </div>
-              <h3>New Office Wins (NOW)</h3>
-              <p>Feb 25, 2021, 12:42pm EST</p>
+
+                  <a href="insights-article-0.html" class="col-12 p-0">
+
+                <img src="assets/images/insights/article-0/diamond-ridge.png" alt="#" class="col-12 p-0">
+<div class="col-12">
+              <h3 class="col-12 p-0">New Office Wins (NOW)</h3>
+              <p class="col-12 p-0">Feb 25, 2021, 12:42pm EST</p>
+</div>
               </a>
-              </div>
+
             </li>
 
 
             <li class="insights mix container-p col-12 col-md-4 float-left">
-              <div class="portfolio-list col-12 float-left">
-                <a href="insights-article-1.html">
-                  <div class="col-12 p-0 portfolio-image-container">
-              <img src="assets/images/insights/article-1/office-cover.png" alt="#">
-              </div>
-            <h3>What you pay in rent doesn't matter</h3>
-            <p>Feb 25, 2021, 12:42pm EST</p>
+
+                <a href="insights-article-1.html" class="col-12 p-0">
+
+              <img src="assets/images/insights/article-1/office-cover.png" alt="#" class="col-12 p-0">
+<div class="col-12">
+            <h3 class="col-12 p-0">What you pay in rent doesn't matter</h3>
+            <p class="col-12 p-0">Feb 25, 2021, 12:42pm EST</p>
+</div>
             </a>
-            </div>
+
           </li>
 
 
             <li class="insights mix container-p col-12 col-md-4 float-left">
-            <div class="portfolio-list col-12 float-left">
-              <a href="insights-article-2.html">
-                <div class="col-12 p-0 portfolio-image-container">
-            <img src="assets/images/insights/article-2/ammenities-cover.png" alt="#">
-            </div>
-            <h3>Workplace amenities are not entitlements</h3>
-            <p>Feb 3, 2021, 7:54am EST</p>
+
+              <a href="insights-article-2.html" class="col-12 p-0">
+
+            <img src="assets/images/insights/article-2/ammenities-cover.png" alt="#" class="col-12 p-0">
+<div class="col-12">
+            <h3 class="col-12 p-0">Workplace amenities are not entitlements</h3>
+            <p class="col-12 p-0">Feb 3, 2021, 7:54am EST</p>
+</div>
             </a>
-            </div>
+
           </li>
 
 
 
 
 <li class="properties mix container-p col-12 col-md-4 float-left">
-<div class="portfolio-list col-12 float-left">
-  <a href="portfolio-riviera.html">
-    <div class="col-12 p-0 portfolio-image-container">
-<img src="assets/images/portfolio/riviera.png" alt="#">
+
+  <a href="portfolio-riviera.html" class="col-12 p-0">
+
+<img src="assets/images/portfolio/riviera.png" alt="#" class="col-12 p-0">
+<div class="col-12">
+<h3 class="col-12 p-0">THE RIVIERA</h3>
+<p class="col-12 p-0">South Oakland</p>
 </div>
-<h3>THE RIVIERA</h3>
-<p>South Oakland</p>
 </a>
-</div>
+
 </li>
 
 
 
 <li class="properties mix container-p col-12 col-md-4 float-left">
-<div class="portfolio-list col-12 float-left">
-  <a href="portfolio-vision.html">
-    <div class="col-12 p-0 portfolio-image-container">
-<img src="assets/images/portfolio/visionedit.png" alt="#">
+
+  <a href="portfolio-vision.html" class="col-12 p-0">
+
+<img src="assets/images/portfolio/visionedit.png" alt="#" class="col-12 p-0">
+<div class="col-12">
+<h3 class="col-12 p-0">THE VISION</h3>
+<p class="col-12 p-0">Strip District</p>
 </div>
-<h3>THE VISION</h3>
-<p>Strip District</p>
 </a>
-</div>
+
 </li>
 
 
 
 
 <li class="properties mix container-p col-12 col-md-4 col-lg-4 float-left">
-<div class="portfolio-list col-12 float-left">
-  <a href="portfolio-diamond-ridge.html">
-    <div class="col-12 p-0 portfolio-image-container">
-<img src="assets/images/portfolio/diamond.png" alt="#">
+
+  <a href="portfolio-diamond-ridge.html" class="col-12 p-0">
+
+<img src="assets/images/portfolio/diamond.png" alt="#" class="col-12 p-0">
+<div class="col-12">
+<h3 class="col-12 p-0">DIAMOND RIDGE</h3>
+<p class="col-12 p-0">Moon Township</p>
 </div>
-<h3>DIAMOND RIDGE</h3>
-<p>Moon Township</p>
 </a>
-</div>
+
 </li>
 
 </ul>
