--- a/index.html
+++ b/index.html
@@ -566,7 +566,7 @@ ScrollReveal().reveal('.reveal-1', { delay: 250 });
 
           <script>
                     $(function(){
-                      $('#portfolio').mixItUp({
+                      $('#press-page').mixItUp({
                         load: {
                           filter: '.press'
                         }
