--- a/press.html
+++ b/press.html
@@ -277,7 +277,7 @@
 
         <li class="south current mix col-12 col-md-6 col-lg-4 float-left">
           <a href="press-article-14.html" class="col-12 p-0">
-        <img src="assets/images/press/visionedit.jpg" alt="#" class="col-12 p-0">
+        <img src="assets/images/press/visionedit.png" alt="#" class="col-12 p-0">
         <div class="col-12">
         <h3 class="col-12 p-0">RDC, Burns Scalo partner for $75M Strip District development</h3>
         <p class="col-12 p-0">Nov 10, 2020, 4:53pm EST | Tim Schooley</p>
