--- a/index.html
+++ b/index.html
@@ -241,8 +241,8 @@ Your browser does not support the video tag.
 
 
 
-<div class="col-12 d-block" id="press-page">
-  <div class="col-12 container">
+<div class="col-12 d-block" id="home-press">
+  <div class="col-12 container" id="press-page">
 <p class="small-headline col-10 col-md-12 col-lg-10 offset-1 offset-md-0 offset-lg-1">
   DISCOVER MORE
 </p>
@@ -267,7 +267,7 @@ Your browser does not support the video tag.
   <a href="press-article-1.html" class="col-12 p-0">
 
 <img src="assets/images/portfolio/visionedit.png" alt="#" class="col-12 p-0">
-<div class="col-12">
+<div class="article-container col-12">
 <h3 class="col-12 p-0">Corridors of Opportunity: What's next for the Strip District?</h3>
 <p class="col-12 p-0">Feb 25, 2021, 12:42pm EST | Pittsburgh Business Times</p>
 </div>
@@ -281,7 +281,7 @@ Your browser does not support the video tag.
 <a href="press-article-2.html" class="col-12 p-0">
 
 <img src="assets/images/press/jim.png" alt="#" class="col-12 p-0">
-<div class="col-12">
+<div class="article-container col-12">
 <h3 class="col-12 p-0">Scalo's Viewpoint: The forces Covid can't stop</h3>
 <p class="col-12 p-0">Feb 3, 2021, 7:54am EST | Jim Scalo</p>
 </div>
@@ -294,7 +294,7 @@ Your browser does not support the video tag.
 <a href="press-article-3.html" class="col-12 p-0">
 
 <img src="assets/images/press/diamond-ridge.png" alt="#" class="col-12 p-0">
-<div class="col-12">
+<div class="article-container col-12">
 <h3 class="col-12 p-0">Burns Scalo buys former KMart site in Moon from Chevron to add to Diamond Ridge plan</h3>
 <p class="col-12 p-0">Dec 30, 2020, 2:02pm EST | Tim Schooley</p>
 </div>
