--- a/index.html
+++ b/index.html
@@ -241,8 +241,8 @@ Your browser does not support the video tag.
 
 
 
-<div class="col-12 d-block" id="home-press">
-  <div class="col-12 container" id="press-page">
+<div class="col-12" id="home-press">
+  <div class="col-12" id="press-page">
 <p class="small-headline col-10 col-md-12 col-lg-10 offset-1 offset-md-0 offset-lg-1">
   DISCOVER MORE
 </p>
