--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
       </header>
 
 
-      <nav class="col-12 col-lg-10 col-xl-9 offset-lg-2 offset-xl-3" id="nav">
-        <ul class="main-nav col-8 col-md-5 col-lg-6 col-xl-6 offset-2 offset-md-4 offset-lg-2 offset-xl-2">
+      <nav class="col-12 col-xl-9 offset-xl-3" id="nav">
+        <ul class="main-nav col-8 col-md-5 col-lg-8 col-xl-6 offset-2 offset-md-4 offset-lg-4 offset-xl-2">
 
           <li class="nav-item-1 d-none d-xl-block"><a href="who-we-are.html">WHO WE ARE</a>
             <ul id="subNav1">
@@ -58,7 +58,8 @@
 <li class="nav-item-2 d-xl-none" id="subnav-1-open"><a onclick="subNav1()"><img src="assets/arrow-vertical.svg" alt="arrow to expand and collapse sub menu"></a></li>
 
 <li class="subnav-mobile-custom d-block-xl-none" id="subNavMobile1">
-  <ul>
+
+  <ul class="col-lg-6 offset-lg-4">
 <li class="sub-1"><a href="team.html">TEAM</a></li>
 <li class="sub-2"><a href="press.html">PRESS</a></li>
 <li class="sub-3"><a href="insights.html">INSIGHTS</a></li>
@@ -243,13 +244,13 @@ Your browser does not support the video tag.
 
 <div class="col-12" id="home-press">
   <div class="col-12" id="press-page">
-<p class="small-headline col-10 col-md-12 col-lg-10 offset-1 offset-md-0 offset-lg-1">
+<p class="small-headline col-10 col-md-10 col-lg-10 offset-1 offset-md-1 offset-lg-1">
   DISCOVER MORE
 </p>
 
 
       <div class="container-mixitup  col-12 p-0">
-<ul class="filters-2 col-12 col-md-12 col-lg-8 offset-md-0 offset-lg-1 float-left float-left">
+<ul class="filters-2 col-12 col-md-10 col-lg-8 offset-md-1 offset-lg-1 float-left float-left">
         <li><a class="filter" data-filter=".press">PRESS</a></li>
         <li><a class="filter" data-filter=".insights">INSIGHTS</a></li>
         <li><a class="filter" data-filter=".properties">PROPERTIES</a></li>
@@ -257,7 +258,7 @@ Your browser does not support the video tag.
 
 
 
-<ul class="containMix portfolio-container col-10 col-md-12 col-lg-10 offset-1 offset-md-0 offset-lg-1 float-left">
+<ul class="containMix portfolio-container col-10 col-md-10 col-lg-10 offset-1 offset-md-1 offset-lg-1 float-left">
 
 
 <!-- 1-9 -->
