--- a/index.html
+++ b/index.html
@@ -136,21 +136,21 @@ Your browser does not support the video tag.
         <img src="assets/images/video-placeholder.png" alt="#" class="col-12">
           </div>
 
-        <div class="reveal-2 copy-container col-12 col-lg-6">
-            <h2 class="align-left col-10 col-xl-10 offset-1">EXPECT
+        <div class="reveal-2 copy-container col-12 col-lg-8 col-xl-4 offset-lg-2 offset-xl-0">
+            <h2 class="align-left col-12 col-xl-11 offset-xl-1">EXPECT
           <br>
           <span class="green-underline">MORE</span></h2>
 
 
 
-        <p class="body-copy reveal-2 col-10 col-lg-8 offset-1 offset-lg-1">
+        <p class="body-copy reveal-2 col-12 col-xl-11 offset-xl-1">
         We create spaces that people want to come to, not just have to. Dynamic spaces that not only attract today’s brightest talent but also spark motivation, innovation, happiness, and loyalty for years to come. Giving them more of the things they love, and giving you peace of mind.
         </p>
 
 
 
-        <div class="links-container reveal-3 col-10 offset-1">
-          <a href="who-we-are.html" class="link-outline-2 col-12 col-lg-10">
+        <div class="links-container reveal col-12 col-xl-11 offset-xl-1">
+          <a href="who-we-are.html" class="link-outline-2 col-12">
             <p class="col-10">CAREERS
               <br>
         <span class="fancy-text">Make Your Move</span>
@@ -158,7 +158,7 @@ Your browser does not support the video tag.
           <img src="assets/arrow.svg" alt="arrow pointing right" class="col-2 arrow">
           </a>
 
-          <a href="what-we-do.html" class="col-12  col-lg-10 border-bottom link-outline-2">
+          <a href="what-we-do.html" class="col-12 border-bottom link-outline-2">
             <p class="col-10">DISCOVER
               <br>
         <span class="fancy-text">Dreams On Demand</span>
