--- a/index.html
+++ b/index.html
@@ -120,10 +120,10 @@ Your browser does not support the video tag.
 
 
         <section class="col-12" id="container-2">
-        <span class="top"></span>
 
 
-        <div class="reveal-1 scale item copy-container col-12 col-lg-8 col-xl-5 offset-lg-2 offset-xl-1"  data-anijs="if: scroll, on: window, do: rollIn animated, before: scrollReveal; if: load, on: window, do: rubberBand animated;">
+
+        <div class="reveal-1 scale item copy-container col-12 col-md-10 offset-md-1 col-lg-8 col-xl-5 offset-lg-2 offset-xl-1">
 
         <!-- VIDEO - DO NOT DELETE
           <video controls class="col-12 d-none d-lg-block">
@@ -136,7 +136,7 @@ Your browser does not support the video tag.
         <img src="assets/images/video-placeholder.png" alt="#" class="col-12">
           </div>
 
-        <div class="reveal-2 copy-container col-12 col-lg-8 col-xl-4 offset-lg-2 offset-xl-0">
+        <div class="reveal-2 copy-container col-12 col-md-10 offset-md-1 col-lg-8 col-xl-4 offset-lg-2 offset-xl-0">
             <h2 class="align-left col-12 col-xl-11 offset-xl-1">EXPECT
           <br>
           <span class="green-underline">MORE</span></h2>
