--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ Your browser does not support the video tag.
 
 
 
-        <div class="reveal-1 scale item copy-container col-12 col-md-10 offset-md-1 col-lg-8 col-xl-5 offset-lg-2 offset-xl-1">
+        <div class="reveal-1 scale item copy-container col-12 col-md-10 offset-md-1 col-lg-8 col-xl-4 offset-lg-2 offset-xl-1 p-0">
 
         <!-- VIDEO - DO NOT DELETE
           <video controls class="col-12 d-none d-lg-block">
@@ -133,23 +133,23 @@ Your browser does not support the video tag.
         </video>
         -->
 
-        <img src="assets/images/video-placeholder.png" alt="#" class="col-12">
+        <img src="assets/images/video-placeholder.png" alt="#" class="col-12 p-0">
           </div>
 
-        <div class="reveal-2 copy-container col-12 col-md-10 offset-md-1 col-lg-8 col-xl-5 offset-lg-2 offset-xl-0">
+        <div class="reveal-2 copy-container col-12 col-md-10 offset-md-1 col-lg-8 col-xl-6 offset-lg-2 offset-xl-0">
             <h2 class="align-left col-12 col-xl-11 offset-xl-1">EXPECT
           <br>
           <span class="green-underline">MORE</span></h2>
 
 
 
-        <p class="body-copy reveal-2 col-12 col-xl-10 offset-xl-1">
+        <p class="body-copy reveal-2 col-12 col-xl-11 offset-xl-1">
         We create spaces that people want to come to, not just have to. Dynamic spaces that not only attract today’s brightest talent but also spark motivation, innovation, happiness, and loyalty for years to come. Giving them more of the things they love, and giving you peace of mind.
         </p>
 
 
 
-        <div class="links-container reveal col-12 col-xl-10 offset-xl-1">
+        <div class="links-container reveal col-12 col-xl-11 offset-xl-1">
           <a href="who-we-are.html" class="link-outline-2 col-12">
             <p class="col-10">CAREERS
               <br>
@@ -175,12 +175,12 @@ Your browser does not support the video tag.
 
         <section class="col-12 slide-right" id="half-screen">
 
-        <h2 class="reveal-1 align-right col-10 col-lg-4 col-xl-5 offset-1 offset-xl-1">DRIVE
+        <h2 class="reveal-1 align-right col-10 col-lg-4 col-xl-4 offset-1">DRIVE
         <br>
         <span class="turquoise-underline align-right">DEFINES US</span></h2>
 
 
-          <div class="copy-container col-12 col-lg-5">
+          <div class="copy-container col-12 col-lg-6">
         <p class="reveal-2 col-10 col-lg-12 col-xl-10 offset-1 offset-lg-0 offset-lg-1">
         We’ve revolutionized an industry with radical market-driving business ideas and investment strategies. We are market makers. We risk more than others think is safe.  We care more than others think is wise. We expect more than others think is possible.
         </p>
